; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ena/extr_ena.c_ena_enable_wc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ena/extr_ena.c_ena_enable_wc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }

@VM_MEMATTR_WRITE_COMBINING = common dso_local global i32 0, align 4
@ENA_ALERT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"pmap_change_attr failed, %d\0A\00", align 1
@EOPNOTSUPP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.resource*)* @ena_enable_wc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ena_enable_wc(%struct.resource* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.resource*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.resource* %0, %struct.resource** %3, align 8
  %7 = load %struct.resource*, %struct.resource** %3, align 8
  %8 = call i64 @rman_get_virtual(%struct.resource* %7)
  store i64 %8, i64* %4, align 8
  %9 = load %struct.resource*, %struct.resource** %3, align 8
  %10 = call i32 @rman_get_size(%struct.resource* %9)
  store i32 %10, i32* %5, align 4
  %11 = load i64, i64* %4, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @VM_MEMATTR_WRITE_COMBINING, align 4
  %14 = call i32 @pmap_change_attr(i64 %11, i32 %12, i32 %13)
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %6, align 4
  %16 = icmp ne i32 %15, 0
  %17 = zext i1 %16 to i32
  %18 = call i64 @unlikely(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %1
  %21 = load i32, i32* @ENA_ALERT, align 4
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @ena_trace(i32 %21, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %22)
  %24 = load i32, i32* %6, align 4
  store i32 %24, i32* %2, align 4
  br label %26

25:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %26

26:                                               ; preds = %25, %20
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i64 @rman_get_virtual(%struct.resource*) #1

declare dso_local i32 @rman_get_size(%struct.resource*) #1

declare dso_local i32 @pmap_change_attr(i64, i32, i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @ena_trace(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
